vlib/v/checker/tests/assign_expr_type_err_e.vv
fn main() {
	mut foo := 'hello'
	foo -= `a`
	_ = foo
}
